--- a/css/base/layout.css
+++ b/css/base/layout.css
@@ -12,21 +12,29 @@ background-color: yellow;
     margin: 0 calc(50% - 300px);
     background-color: yellow;
     }
-    @media (max-width:1100px) {
+@media (max-width:1100px) {
         .container > .row {
         width: 800px;
         margin: 0 calc(50% - 400px);
         background-color: yellow;
     }
-    @media (max-width:800px) {
+}
+@media (max-width:800px) {
         .container > .row {
         width: 600px;
         margin: 0 calc(50% - 300px);
         background-color: yellow;
     }
-    @media (max-width:600px) {
+}
+@media (max-width:600px) {
         .container > .row {
         width: 400px;
         margin: 0 calc(50% - 200px);
         background-color: yellow;
-    }
+        }
+        .container > .row-short {
+            width: 400px;
+            margin: 0 calc(50% - 200px);
+            background-color: yellow;
+        }
+}
