--- a/pages/home.css
+++ b/pages/home.css
@@ -8,3 +8,23 @@
 @import "../css/components/form.css";
 @import "../css/components/mouse.css";
 @import "../css/components/progress-bar.css";
+
+.hero {
+    display: flex;
+    flex-direction: column;
+    gap: 50px;
+    text-align: center;
+    align-items: center;
+}
+.hero > .logo {
+height: 60px;
+width: 60px;
+}
+.hero > .title {
+    font-size: 70px;
+    text-transform: uppercase;
+
+}
+.hero > .description {
+font-size: 20px;
+}
