--- a/pages/home.css
+++ b/pages/home.css
@@ -74,6 +74,13 @@ text-transform: uppercase;
     padding: 15px 0;
     border-bottom: 2px solid #fff;
    }
+   .socials {
+       display: flex;
+       justify-content: center;
+       flex-wrap: wrap;
+       gap: 40px;
+       padding: 15px 0;
+   }
    .footer-bottom {
        display: flex;
        flex-direction: column;
