--- a/css/base/layout.css
+++ b/css/base/layout.css
@@ -36,3 +36,21 @@ margin: 0 calc(50% - 500px)
     
         }
 }
+@media (max-width:700px) {
+    .main-content {
+        flex-direction: column;
+        gap:60px;
+    }
+    .column {
+        width: 100%;
+    }
+    .right-column {
+        width: 100%;
+    }
+}
+@media (min-width:1100px) {
+    .form > input {
+        width: calc(50% - 20px);
+
+    }
+}
