--- a/pages/home.css
+++ b/pages/home.css
@@ -35,6 +35,17 @@ width: 60px;
 .hero > .description {
 font-size: 20px;
 }
+.subscribe {
+    flex-direction: column;
+    width: 90%;
+    align-items: center;
+}
+.form.subscribe > input {
+    width: 100%;
+    background-color: transparent;
+    color: #fff;
+    border-color: #fff;
+}
 
 .main-content {
     display: flex;
@@ -64,6 +75,9 @@ text-transform: uppercase;
    }
    .section-description > a:hover {
     text-decoration: underline;
+   }
+   .right-column .btn {
+       align-self: flex-end;
    }
    footer.container {
        padding-top: 0;
